// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: A catch all 1`] = `"Create commodityCommodity IdIdentifierEnter commodity nameMaterial numberSelect commodity statusActiveDisabledSelect commodity TypeSelect commodity typeSelect the unit of measureSelect the unit of measureAttractive itemYesNoIs it thereIs it in good conditionIs it being used appropriatelyAccountability period (in months)Photo of the productUploadsaveCancel"`;

exports[`renders correctly: active radio button 1`] = `
<input
  checked=""
  class="ant-radio-input"
  type="radio"
  value="true"
/>
`;

exports[`renders correctly: active radio button 2`] = `
<input
  checked=""
  class="ant-radio-input"
  type="radio"
  value="true"
/>
`;

exports[`renders correctly: attractive item no radio button 1`] = `
<input
  class="ant-radio-input"
  type="radio"
  value="false"
/>
`;

exports[`renders correctly: attractive item yes radio button 1`] = `
<input
  class="ant-radio-input"
  type="radio"
  value="true"
/>
`;

exports[`renders correctly: disabled radio button 1`] = `
<input
  class="ant-radio-input"
  type="radio"
  value="false"
/>
`;

exports[`renders correctly: disabled radio button 2`] = `
<input
  class="ant-radio-input"
  type="radio"
  value="false"
/>
`;
